Header/Footer: Fix broken styles from Gutenberg `11.9.0`
Fixes https://github.com/WordPress/wporg-news-2021/issues/73

--- a/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
@@ -9,6 +9,7 @@
 	& > .global-footer__navigation-container {
 		max-width: 100%;
 		display: grid;
+		align-items: start;
 		column-gap: 20px;
 		row-gap: 35px;
 
@@ -17,6 +18,7 @@
 	}
 
 	& .wp-block-navigation__container {
+		flex-direction: column;
 		gap: 5px;
 	}
 }
